--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body>
 <header class="cabecalho">
-    <button class="cabecalho__menu">menu</button>
+    <button class="cabecalho__menu"><i></i></button>
     <img src="./assets/img/logo.svg" alt="Logo Picos" class="cabecalho__logo">
-    <button class="cabecalho__notificacao">notificação</button>
+    <button class="cabecalho__notificacao"><i></i></button>
 </header>
 </body>
 
