implementando menu lateral

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
-    
+
     <!-- RESET CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css">
 
@@ -20,11 +20,20 @@
 </head>
 
 <body>
-<header class="cabecalho">
-    <button class="cabecalho__menu"><i></i></button>
-    <img src="./assets/img/logo.svg" alt="Logo Picos" class="cabecalho__logo">
-    <button class="cabecalho__notificacao"><i></i></button>
-</header>
+    <header class="cabecalho">
+        <button class="cabecalho__menu"><i></i></button>
+        <img src="./assets/img/logo.svg" alt="Logo Sk8 Picos" class="cabecalho__logo">
+        <button class="cabecalho__notificacao"><i></i></button>
+    </header>
+    <nav class="menu-lateral">
+        <img src="./assets/img/logo.svg" alt="Logo Sk8 Picos" class="menu-lateral__logo">
+        <a href="#" class="menu-lateral__link menu-lateral__link--inicio">Início</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--video">Vídeos</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link --integrantes">Integrantes</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
+    </nav>
 </body>
 
 </html>
