--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
     </header>
     <nav class="menu-lateral">
         <img src="./assets/img/logo.svg" alt="Logo Sk8 Picos" class="menu-lateral__logo">
-        <a href="#" class="menu-lateral__link menu-lateral__link--inicio">Início</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link--video">Vídeos</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link --integrantes">Integrantes</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
-</body>
 
+    <script src="./assets/js/index.js"></script>  
+</body>
+ 
 </html>
