criando cartao base

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
+    <main class="principal">
+        <h2 class="titulo-pagina">Início</h2>
+        <article class="cartao">
+            <img src="./assets/img/banner-mobile_1.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__destaque">Vídeo em destaque</p>
+                <h3 class="cartao__titulo">SK8 - Picos</h3>
+                <p class="cartao__perfil">Andre Maciel</p>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <p class="cartao__indo cartao__info--vizualizacao">33 visualizações</p>
+                <button class="cartao__botao cartao__botao--destaque cartao__botao--play">Assistir agora</button>
+            </div>
+        </article>
+    </main>
 
     <script src="./assets/js/index.js"></script>  
 </body>
