--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     </nav>
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
-        <article class="cartao">
+        <!-- CARD DE DESTAQUE -->
+        <article class="cartao cartao--destaque">
             <img src="./assets/img/banner-mobile_1.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
@@ -47,6 +48,98 @@
                 <button class="cartao__botao cartao__botao--destaque cartao__botao--play">Assistir agora</button>
             </div>
         </article>
+        <!-- SEÇÃO MAIS VISTOS -->
+        <section class="secao">
+            <h3 class="secao__titulo">Vídeos mais vistos</h3>
+            <article class="cartao">
+                <img src="./assets/img/video_1.png" alt="Vídeo 1" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Andre Soares</p>
+                    <h3 class="cartao__titulo">hzc - Tudo sem Padrin</h3>
+                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="./assets/img/video_2.png" alt="Vídeo 2" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Bruno Lopes</p>
+                    <h3 class="cartao__titulo">HZC - Enter The Hu-flez</h3>
+                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="./assets/img/video_3.png" alt="Vídeo 3" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">HZC - Vol.3</h3>
+                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="./assets/img/video_4.png" alt="Vídeo 4" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Bruno Lopes</p>
+                    <h3 class="cartao__titulo">HZC - Love Machine</h3>
+                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+        </section>
+        <!-- CAMISAS -->
+        <article class="cartao cartao--destaque">
+            <img src="./assets/img/banner-mobile_2.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__destaque">Vídeo em destaque</p>
+                <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
+                <p class="cartao__perfil">Andre Maciel</p>
+                <p class="cartao__info">$ 33,33</p>
+                <p class="cartao__indo cartao__info--vizualizacao">53 visualizações</p>
+                <button class="cartao__botao cartao__botao--destaque cartao__botao--play">Comprar agora</button>
+            </div>
+        </article>
+        <section class="secao">
+            <h3 class="secao__titulo">Camisas mais recentes</h3>
+            <article class="cartao">
+                <img src="./assets/img/produto_1.png" alt="Vídeo 1" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Andre Soares</p>
+                    <h3 class="cartao__titulo">IBM</h3>
+                    <p class="cartao__info">$ 33,33</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Comprar Agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="./assets/img/produto_2.png" alt="Vídeo 2" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Bruno Lopes</p>
+                    <h3 class="cartao__titulo">Huflez Crew Philosophy Club</h3>
+                    <p class="cartao__info">$ 33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Comprar agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="./assets/img/produto_3.png" alt="Vídeo 3" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">Corujita noturna</h3>
+                    <p class="cartao__info">33,33</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Comprar agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="./assets/img/produto_4.png" alt="Vídeo 4" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Bruno Lopes</p>
+                    <h3 class="cartao__titulo">SK8 - Picos</h3>
+                    <p class="cartao__info">$ 33,33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Comprar agora"></button>
+                </div>
+            </article>
+        </section>
+        
     </main>
 
     <script src="./assets/js/index.js"></script>  
