Ajustando posição do header e menu lateral

--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
 </head>
 
 <body>
+    <!-- CABEÇALHO -->
     <header class="cabecalho">
         <button class="cabecalho__menu"><i></i></button>
         <img src="./assets/img/logo.svg" alt="Logo Sk8 Picos" class="cabecalho__logo">
+        <p class="cabecalho__perfil">Bruno Lopes</p>
         <button class="cabecalho__notificacao"><i></i></button>
     </header>
+
+    <!-- MENU LATERAL -->
     <nav class="menu-lateral">
         <img src="./assets/img/logo.svg" alt="Logo Sk8 Picos" class="menu-lateral__logo">
         <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
@@ -34,8 +38,11 @@
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
+
+    <!-- PRINCIPAL -->
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
+
         <!-- CARD DE DESTAQUE -->
         <article class="cartao cartao--destaque">
             <img src="./assets/img/banner-mobile_1.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem">
@@ -48,6 +55,38 @@
                 <button class="cartao__botao cartao__botao--destaque cartao__botao--play">Assistir agora</button>
             </div>
         </article>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos Recentes</h3>
+            <a href="" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+            </ul>
+        </article>
+
         <!-- SEÇÃO MAIS VISTOS -->
         <section class="secao">
             <h3 class="secao__titulo">Vídeos mais vistos</h3>
@@ -88,6 +127,38 @@
                 </div>
             </article>
         </section>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos Recentes</h3>
+            <a href="" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC- Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+            </ul>
+        </article>
+        
         <!-- CAMISAS -->
         <article class="cartao cartao--destaque">
             <img src="./assets/img/banner-mobile_2.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem">
