--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <h2 class="titulo-pagina">Início</h2>
 
         <!-- CARD DE DESTAQUE -->
-        <article class="cartao cartao--destaque">
-            <img src="./assets/img/banner-mobile_1.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem">
+        <article class="cartao cartao--destaque destaque-video">
+            <img src="./assets/img/banner-mobile_1.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner_1.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
                 <h3 class="cartao__titulo">SK8 - Picos</h3>
@@ -55,7 +56,7 @@
                 <button class="cartao__botao cartao__botao--destaque cartao__botao--play">Assistir agora</button>
             </div>
         </article>
-        <article class="cartao cartao--recentes">
+        <article class="cartao cartao--recentes videos-recentes">
             <h3 class="cartao__titulo">Vídeos Recentes</h3>
             <a href="" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
@@ -88,7 +89,7 @@
         </article>
 
         <!-- SEÇÃO MAIS VISTOS -->
-        <section class="secao">
+        <section class="secao secao-videos">
             <h3 class="secao__titulo">Vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="./assets/img/video_1.png" alt="Vídeo 1" class="cartao__imagem">
@@ -127,7 +128,7 @@
                 </div>
             </article>
         </section>
-        <article class="cartao cartao--recentes">
+        <article class="cartao cartao--recentes produtos-recentes">
             <h3 class="cartao__titulo">Vídeos Recentes</h3>
             <a href="" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
@@ -158,10 +159,11 @@
                 </li>
             </ul>
         </article>
-        
+
         <!-- CAMISAS -->
-        <article class="cartao cartao--destaque">
-            <img src="./assets/img/banner-mobile_2.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem">
+        <article class="cartao cartao--destaque destaque-produtos">
+            <img src="./assets/img/banner-mobile_2.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner_2.png" alt="banner Sk8-Picos Mobile" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
                 <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
@@ -171,7 +173,7 @@
                 <button class="cartao__botao cartao__botao--destaque cartao__botao--play">Comprar agora</button>
             </div>
         </article>
-        <section class="secao">
+        <section class="secao secao-produtos">
             <h3 class="secao__titulo">Camisas mais recentes</h3>
             <article class="cartao">
                 <img src="./assets/img/produto_1.png" alt="Vídeo 1" class="cartao__imagem">
